[metadata]
name = galactica
version = attr: galactica.__version__
author = Juanjo Bazán
author_email = hello@juanjobazan.com
license = MIT
description = Galactic multiphase chemical evolution model
keywords =
    galaxies
    models
    astrophysics
url = https://github.com/xuanxu/galactica
download_url = https://github.com/xuanxu/galactica
long_description = file: README.rst
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.6
package_dir=
    =src
packages = find:
install_requires =
    pyyaml>=5.3
    numpy>=1.19
    scipy>=1.5
    starmatrix>=1.7.4
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6.0
    pytest_mock
    pytest_cov

[pycodestyle]
max-line-length = 160
statistics = True
exclude = zzzzz*, build, .git, _build, .pytest_cache, __pycache__, dist

[tool:pytest]
python_files = test_*.py
addopts = -v --cov=galactica
testpaths = src/galactica/tests
